--- a/templates/curriculo.html
+++ b/templates/curriculo.html
@@ -14,16 +14,16 @@
     </header>
     <div class="curriculo-content">
         <ul>
-                <li>[Endereço]</li>
-                <li>[Cidade, Estado e Cep]</li>
-                <li>[Telefone]</li>
-                <li>[Email]</li>
+                <li>Rua Arruda</li>
+                <li>Porto Velho, Rondônia</li>
+                <li>(69) 4002-8922</li>
+                <li>vasconcelos.iansantos@gmail.com</li>
         </ul>
 
         <p class="meu-nome">Ian Vinícius Vasconcelos de Oliveira Santos</p><hr>
 
         <h1 class="title-objetivo">Objetivo</h1>
-        <p class="paragrafo">Trabalhar em uma empresa conceituada, buscando adquirir
+        <p class="paragrafo">Trabalhar em uma empresa conceituada, visando adquirir
             experiência profissional e exercer meus conhecimentos técnicos.
         </p><hr>
 
@@ -40,31 +40,25 @@
 
         <h1 class="title-experiencia">Experiência</h1>   
         <ul class="informacoes">
-                <li>[CARGO, NOME DA EMPRESA] [Datas De – Até]</li>
-                <li>[CARGO, NOME DA EMPRESA] [Datas De – Até]</li>
-                <li>[CARGO, NOME DA EMPRESA] [Datas De – Até]</li>
-                <li>[CARGO, NOME DA EMPRESA] [Datas De – Até]</li>
+                <li>Sem experiência profissional.</li>
         </ul><hr>
 
         <h1 class="title-educacao">Educação</h1>   
         <ul class="informacoes">
-                <li>[NOME DA INSTITUIÇÃO – LOCAL – GRADUAÇÃO]</li>
-                <li>[NOME DA INSTITUIÇÃO – LOCAL – GRADUAÇÃO]</li>
-                <li>[NOME DA INSTITUIÇÃO – LOCAL – GRADUAÇÃO]</li>
-                <li>[NOME DA INSTITUIÇÃO – LOCAL – GRADUAÇÃO]</li>
+                <li>Instituto Federal de Educação, Ciência e Tecnologia de Rondônia - Campus Porto Velho Calama</li>
         </ul><hr>
 
         <h1 class="title-comunicacao">Comunicação</h1>
         <p class="paragrafo">
-            Aliquet solales volupat interdom alqueim nibb, elat garivda tichacho ruptram <br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elementum tortor sed ligula varius hendrerit. Ut commodo metus enim, sed congue lorem dictum nec. Morbi ac pharetra ex. Proin at faucibus purus, at imperdiet odio. Cras non purus sapien. Nam sit amet nulla non mi scelerisque volutpat. Praesent scelerisque augue at sapien gravida, sit amet vestibulum leo tristique. Nullam ornare turpis nisl, id consectetur leo mollis non. Ut vitae dui porttitor, dignissim enim pharetra, sagittis velit. <br>
         </p><hr>
 
         <h1 class="title-referencias">Referências</h1>
         <ol class="informacoes">
-            <li>[NOME DE REFERÊNCIA, Cargo, Empresa, contato]</li>
-            <li>[NOME DE REFERÊNCIA, Cargo, Empresa, contato]</li>
-            <li>[NOME DE REFERÊNCIA, Cargo, Empresa, contato]</li>
-            <li>[NOME DE REFERÊNCIA, Cargo, Empresa, contato]</li>
+            <li>NOME DE REFERÊNCIA, Cargo, Empresa, contato</li>
+            <li>NOME DE REFERÊNCIA, Cargo, Empresa, contato</li>
+            <li>NOME DE REFERÊNCIA, Cargo, Empresa, contato</li>
+            <li>NOME DE REFERÊNCIA, Cargo, Empresa, contato</li>
         </ol>
     </div>
     <footer>&copy; Desenvolvido por Ian Vinícius Vasconcelos</footer>
