--- a/style.css
+++ b/style.css
@@ -28,7 +28,16 @@ footer{
 }
 /* ESTILIZAÇÃO DO EXERCÍCIO 01 - CURRÍCULO */
 .curriculo{
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+
+    margin: 2rem 10rem;
+
     background-color: aliceblue;
+    border: 2px solid black;
 }
 
 header .title-exercicio{
@@ -49,6 +58,7 @@ header .descricao-exercicio{
 .curriculo-content h1{
     font-size: 1.5em;
     font-weight: 700;
+    margin-left: 1rem;
     text-transform: uppercase;
 
     background-color: rgb(157, 247, 217);
@@ -76,21 +86,47 @@ header .descricao-exercicio{
 
 
 /* ESTILIZAÇÃO DO EXERCÍCIO 02 - MURAL DE CÃES */
-.mural-content{
+.mural{
     display: flex;
     flex-direction: column;
 
-    padding: 2rem 5rem;
-    border: 2px solid #000;
+    align-items: center;
+    justify-content: center;
+
+    margin: 2rem 10rem;
+}
+
+.mural p{
+    font-weight: normal;
+}
+
+.mural-content{
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    padding: 0rem 5rem;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid #000;
+}
+
+.mural-content h1{
+    margin-top: 3rem;
 }
 
 .mural-content img{
-    height: 150px;
-    width: 150px;
-    padding: 3.5rem 5rem;
+    height: 200px;
+    width: 200px;
+    border-radius: 5px;
+
+    margin-top: 5rem;
+    margin-bottom: 1rem;
 }
 
-
+.desaparecido{
+    background-color: #dadada;
+    margin-right: 5rem;
+}
 
 /* ESTILIZAÇÃO DO EXERCÍCIO 03 - GRADE DE CURSOS IFRO */
 .formulario{
@@ -111,17 +147,37 @@ header .descricao-exercicio{
     flex-direction: column;
 
     padding: 2rem 2rem;
+
+    border-radius: 5px;
+    border: 2px solid orange;
 }
 
 .form-box input{
     width: 30em;
     height: 1.5em;
+    border: none;
+    border-bottom: 2px solid orange;
 }
 
 .form-box label{
+    font-size: 0.9em;
+    text-transform: uppercase;
     padding: 0.8rem 0rem;
 }
 
+.botao-formulario{
+    border-radius: 5px;
+    border: 2px solid orange;
+    background-color: transparent;
+
+    margin-top: 2rem;
+}
+
+.botao-formulario a{
+    color: orange;
+    font-size: 1.3em;
+    font-weight: 600;
+}
 
 /* ESTILIZAÇÃO DO EXERCÍCIO 05 - INDEX */
 body.index{
@@ -365,7 +421,7 @@ footer.rodape{
     height: 120%;   
     width: 100%;
     
-    background-color: #e7e7e781;
+    background-color: #fff;
     grid-area: footer;
 }
 
