--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ html{
     font-size: 1em;
     font-weight: 600;
     font-family: 'Poppins', sans-serif;
+
+    overflow-x: hidden;
 }
 
 footer{
